--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="screen_background">#333333</color>
+    <color name="realm_red">#f0727d</color>
+    <color name="realm_blue">#428bca</color>
 </resources>
